Potential fix for allowing modals to scroll on iOS

--- a/src/less/base.less
+++ b/src/less/base.less
@@ -5,6 +5,9 @@ body {
 	&.no-scroll {
 		overflow: hidden;
 	}
+	&.modal-open {
+		position: fixed;
+	}
 }
 
 h2 {
